some fixes to the new version of some tools and apps